# ffmpeg_examples

./: .gitignore  CMakeLists.txt  encode_video.c  ffmpeg_compile.md  hw_decode.c  metadata.c  muxing.c  my_encoder.c  my_notes.md
src/: Makefile  Makefile_origin  decode_video.c  demuxing_decoding.c  encode_video.c  my_encoder.cpp  my_encoder.h  transcoding.c
